# structured_antagonism

./: .gitignore  README.md  pyproject.toml
audits/: F-001.md  FINDINGS.md
docs/: analysis.md  anatomy.md  construction-guide.md  cross-domain-mappings.md  manifesto.md  philosophy.md  psuu.md  research-journal.md
domains/data-science/: README.md  analysis-plan.md  plan-audit.md  plan-synthesize.md
domains/research/: README.md
domains/software-systems/: README.md  product-spec.md  spec-audit.md  spec-synthesize.md
meta/: anti-patterns.md  principles.md
models/: compare.py  comparison_report.txt
models/co_scientist/: model.py
models/co_scientist/artifacts/: co_scientist.mermaid  co_scientist.ttl  structure.txt  verification.txt
models/euthyphro/: annotation-methodology.md  annotations.json  diff_passes.py  extract.py  model.py  pass1_context_minimal.json  phase_c_draft.json  raw_turns.json
models/euthyphro/artifacts/: euthyphro.mermaid  euthyphro.ttl  structure.txt  verification.txt
models/euthyphro/llm_extractions/: divergence_report.md  pass1_gemini.json  pass2_gemini.json
models/gan/: model.py
models/gan/artifacts/: gan.mermaid  gan.ttl  structure.txt  verification.txt
models/oem/: model.py
models/oem/artifacts/: classification.json  oem.mermaid  oem.ttl  structure.txt  verification.txt
models/sa_loop/: model.py
models/sa_loop/artifacts/: sa_loop.mermaid  sa_loop.ttl  structure.txt  verification.txt
ontology/: antagonism_shapes.py
references/: euthyphro.txt
